--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>John Georgiadis Research Group</title>
 </head>
 <body>
-    <h1>Welcome to the Mechanobiology Research Lab</h1>
+    <h1>Welcome to the Mechanobiology Research Lab at Illinois Tech</h1>
     <p>We specialize in biomedical engineering research.</p>
 </body>
 </html>
