--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>John Georgiadis Research Group</title>
 </head>
 <body>
-    <h1>Welcome to the Mechanobiology Research Lab at Illinois Tech</h1>
-    <p>We specialize in biomedical engineering research.</p>
+    <h1>Welcome to the Mechanophysiology Research Lab at Illinois Tech</h1>
+    <p>Research Group of Dr. John Georgiadis, Professor of Biomedical Engineering</p>
+    <p>We specialize in Biomedical Imaging and Biomechanics </p>
 </body>
 </html>
