--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Welcome to the Mechanophysiology Research Lab at Illinois Tech</h1>
     <p>Research Group of Dr. John Georgiadis, Professor of Biomedical Engineering</p>
     <p>We specialize in Biomedical Imaging and Biomechanics </p>
-    <img src="ultrasound_transparent_brain.svg" alt=" One project focuses on Shear Wave Elastography using MRI or Ultrasound" width="300">
+    <img src="Brain_MRE.svg" alt=" Brain Magnetic Resonance Elastography" width="600">
+    <img src="Ultrasound_SWE_muscle_transverse.svg" alt="Ultrasound Shear Wave Elastography of Muscle" width="600">
 </body>
 </html>
