--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 <body>
     <h1>Welcome to the Mechanophysiology Research Lab at Illinois Tech</h1>
     <p>Research Group of Dr. John Georgiadis, Professor of Biomedical Engineering</p>
-    <p>We specialize in Biomedical Imaging and Biomechanics </p>
-    <img src="Brain_MRE.svg" alt=" Brain Magnetic Resonance Elastography" width="600">
-    <img src="Ultrasound_SWE_muscle_transverse.svg" alt="Ultrasound Shear Wave Elastography of Muscle" width="600">
+   
+    <p>We specialize in Biomedical Imaging and Biomechanics</p>
+    <p>Contact us: <a href="mailto:jgeorgiadis@iit.edu">Dr. John Georgiadis</a></p>
+    
+    <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+        <img src="Brain_MRE.svg" alt="Brain Magnetic Resonance Elastography" width="400">
+        <img src="Ultrasound_SWE_muscle_transverse.svg" alt="Ultrasound Shear Wave Elastography of Muscle" width="400">
+    </div>
 </body>
 </html>
