--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h1>Welcome to the Mechanophysiology Research Lab at Illinois Tech</h1>
-    <p>Research Group of Dr. John Georgiadis, Professor of Biomedical Engineering</p>
+    <p>Research Group of John G. Georgiadis, R. A. Pritzker Professor of Biomedical Engineering</p>
    
     <p>We specialize in Biomedical Imaging and Biomechanics</p>
-    <p>Contact us: <a href="mailto:jgeorgiadis@iit.edu">Dr. John Georgiadis</a></p>
+    <p><i>Contact us: <a href="mailto:jgeorgiadis@iit.edu">email Dr. John Georgiadis</a></i></p>
     
     <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
         <img src="Brain_MRE.svg" alt="Brain Magnetic Resonance Elastography" width="400">
