--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
         <img src="Brain_MRE.svg" alt="Brain Magnetic Resonance Elastography" width="400">
         <img src="Ultrasound_SWE_muscle_transverse.svg" alt="Ultrasound Shear Wave Elastography of Muscle" width="400">
     </div>
+    <br> 
+    <h2>Publications</h2>
+    <ul>
+        <li><a href="Publications/Naughton_2024_Accelerated_physics-inspired_skeletal_muscle_microstructure_dMRI.pdf">Accelerated, physics-inspired inference of
+skeletal muscle microstructure from diffusion-weighted MRI</a></li>
+        <li><a href="Publications/Agarwal_2025_Data-Driven Depiction of Aging Related Physiological Volume Shrinkage BWM.pdf">Data-Driven Depiction of Aging
+Related Physiological Volume Shrinkage in Brain White Matter</a></li>
+    </ul>
 </body>
 </html>
