--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
     <header>
         <h1>Mechanophysiology Research Lab</h1>
         <p>Research Group of Dr. John Georgiadis, R. A. Pritzker Professor of Biomedical Engineering</p>
-        <p>Illinois Tech</p>
+        <p>Illinois Tech, Chicago USA</p>
     </header>
     
     <main>
         <section>
             <p>We specialize in <span class="specialty">Biomedical Imaging</span> and <span class="specialty">Biomechanics</span>, 
-                focusing on connecting tissue microsctructure and mechanical properties to function.</p>
+                and use advanced experimental and computational methods to connect tissue microsctructure and mechanical properties to its function.</p>
         </section>
         
         <section class="image-container">
