--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mechanophysiology Research Lab | Illinois Tech</title>
+    <title>Mechanophysiology Lab | Illinois Tech</title>
     <style>
         /* Modern, clean styling */
         * {
@@ -135,7 +135,7 @@
 </head>
 <body>
     <header>
-        <h1>Mechanophysiology Research Lab</h1>
+        <h1>Mechanophysiology Lab</h1>
         <p>Research Group of Dr. John Georgiadis, R. A. Pritzker Professor of Biomedical Engineering</p>
         <p>Illinois Tech, Chicago USA</p>
     </header>
@@ -158,16 +158,21 @@
         </section>
         
         <section class="publications">
-            <h2>Recent Publications</h2>
+            <h2>Representative Publications</h2>
             <ul>
-                <li>
-                    <a href="Publications/Naughton_2024_Accelerated_physics-inspired_skeletal_muscle_microstructure_dMRI.pdf">
-                        Naughton, et al. (2024). Accelerated, physics-inspired inference of skeletal muscle microstructure from diffusion-weighted MRI.
-                    </a>
-                </li>
                 <li>
                     <a href="Publications/Agarwal_2025_Data-Driven Depiction of Aging Related Physiological Volume Shrinkage BWM.pdf">
                         Agarwal, et al. (2025). Data-Driven Depiction of Aging Related Physiological Volume Shrinkage in Brain White Matter.
+                    </a>
+                </li>
+                 <li>
+                    <a href="Publications/Naughton_2024_Accelerated_physics-inspired_skeletal_muscle_microstructure_dMRI.pdf">
+                        Naughton, et al. (2024). Accelerated, physics-inspired inference of skeletal muscle microstructure from diffusion-weighted MRI.
+                    </a>
+                </li> 
+                <li>
+                    <a href="Publications/Naughton_2020_LBM_simulation_dMRI_multiphase tissue models.pdf">
+                        Naughton, et al. (2020). Lattice Boltzmann method for simulation of diffusion magnetic resonance imaging physics in multiphase tissue models.
                     </a>
                 </li>
             </ul>
@@ -184,7 +189,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 Mechanophysiology Research Lab, Illinois Tech. All rights reserved.</p>
+        <p>&copy; 2025 Mechanophysiology Lab, Illinois Tech. All rights reserved.</p>
     </footer>
 </body>
 </html>
