--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <main>
         <section>
             <p>We specialize in <span class="specialty">Biomedical Imaging</span> and <span class="specialty">Biomechanics</span>, 
-                and use advanced experimental and computational methods to connect tissue microsctructure and mechanical properties to its function.</p>
+                and use advanced experimental and computational methods to connect tissue microstructure and mechanical properties to its physiology and function.</p>
         </section>
         
         <section class="image-container">
